--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -12,5 +12,11 @@
     "Url": "https://api.polygon.io/v2",
     "APIKey": "AE5hyk2KIfCw_ai1W0nSmlpJECERvomI"
   },
+  "EmailSettings": {
+    "SenderName": "drmaf5000@yahoo.com",
+    "SenderSecret": "fzugshbxfutpuszd",
+    "Host": "smtp.mail.yahoo.com",
+    "Port": 587
+  },
   "AllowedHosts": "*"
 }
