--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=ASAP;Trusted_Connection=True;TrustServerCertificate=True;"
+    //"DefaultConnection": "Server=.;Database=ASAP;Trusted_Connection=True;TrustServerCertificate=True;",
+    "DefaultConnection": "server=.; database=ASAP; Integrated Security=True;TrustServerCertificate=True; User Id=sa; Password=P@ssw0rd;"
+
   },
   "Logging": {
     "LogLevel": {
@@ -17,6 +19,26 @@
     "SenderSecret": "fzugshbxfutpuszd",
     "Host": "smtp.mail.yahoo.com",
     "Port": 587
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": "Warning",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/applog-.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName" ],
+    "Properties": {
+      "ApplicationName": "ASAP App"
+    }
   },
   "AllowedHosts": "*"
 }
