--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,8 +1,6 @@
 {
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=.;Database=ASAP;Trusted_Connection=True;TrustServerCertificate=True;",
-    "DefaultConnection": "server=.; database=ASAP; Integrated Security=True;TrustServerCertificate=True; User Id=sa; Password=P@ssw0rd;"
-
+    "DefaultConnection": "server=.; database=ASAP; User Id=sa; Password=P@ssw0rd;"
   },
   "Logging": {
     "LogLevel": {
