--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,11 +1,11 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=.; database=ASAP; User Id=sa; Password=P@ssw0rd;"
+    "DefaultConnection": "server=.;database=ASAP;User Id=sa;Password=P@ssw0rd;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Error"
     }
   },
   "PolygonSettings": {
@@ -20,7 +20,7 @@
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
-    "MinimumLevel": "Warning",
+    "MinimumLevel": "Error",
     "WriteTo": [
       {
         "Name": "Console"
