--- a/API/API.csproj
+++ b/API/API.csproj
@@ -28,4 +28,13 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="HTMLTemplates\Polygon\News\NewsEmail.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="HTMLTemplates\Polygon\News\NewsItem.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
