--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -10,7 +10,8 @@
   },
   "PolygonSettings": {
     "Url": "https://api.polygon.io/v2",
-    "APIKey": "AE5hyk2KIfCw_ai1W0nSmlpJECERvomI"
+    "APIKey": "AE5hyk2KIfCw_ai1W0nSmlpJECERvomI",
+    "IntervalInMinutes": 3
   },
   "EmailSettings": {
     "SenderName": "drmaf5000@yahoo.com",
